target/classes/META-INF/fabric8/openshift/location-soap-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 5deca24016351b82bc6ffd86a6cfc49eac6e8eaa
    fabric8.io/git-branch: fusespring2
    fabric8.io/git-url: https://github.com/RedHatWorkshops/dayinthelife-integration.git
  labels:
    app: location-soap
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.redhat
  name: location-soap
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: location-soap
    provider: fabric8
    group: com.redhat
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 5deca24016351b82bc6ffd86a6cfc49eac6e8eaa
        fabric8.io/git-branch: fusespring2
        fabric8.io/git-url: https://github.com/RedHatWorkshops/dayinthelife-integration.git
      labels:
        app: location-soap
        provider: fabric8
        version: 1.0.0-SNAPSHOT
        group: com.redhat
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"tomcat":{"max-threads":1}}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: redhat/location-soap:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        resources:
          limits:
            cpu: "1.0"
          requests:
            cpu: "0.2"
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
