target/classes/META-INF/fabric8/openshift/location-soap-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 5deca24016351b82bc6ffd86a6cfc49eac6e8eaa
    fabric8.io/git-branch: fusespring2
    fabric8.io/git-url: https://github.com/RedHatWorkshops/dayinthelife-integration.git
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: location-soap
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.redhat
  name: location-soap
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: location-soap
    provider: fabric8
    group: com.redhat
