target/classes/META-INF/fabric8/openshift/location-soap-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    fabric8.io/git-commit: 5deca24016351b82bc6ffd86a6cfc49eac6e8eaa
    fabric8.io/git-branch: fusespring2
    fabric8.io/git-url: https://github.com/RedHatWorkshops/dayinthelife-integration.git
  labels:
    app: location-soap
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.redhat
  name: location-soap
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: location-soap
